--- a/index.html
+++ b/index.html
@@ -21,13 +21,81 @@
             <div class="nav">
                 <div class="nav-left">
                     <a href="index.html"><img src="img/icon/logo.svg" alt="logo" class="logo"></a>
-                    <form class="search_form">
-                        <button type="submit" class="search_btn"></button>
-                        <input type="text" placeholder="Что искать?" class="search_input">
+                    <form class="search_form" action="search">
+                        <label for="search" class="search_btn"></label>
+                        <input type="text" placeholder="Что искать?" class="search_input" id="search" type="search">
                     </form>
                 </div>
                 <div class="nav-right">
-                    <button class="menu_btn"><img src="./img/icon/menu.svg" alt="menu"></button>
+                    <nav class="nav_menu">
+                        <label class="menu_btn" for="menu_switch">
+                            <span></span>
+                            <input id="menu_switch" type="checkbox">
+                            <ul class="menu_list">
+                                <a href="#" class="menu_list_close_btn"></a>
+                                <h3 class="menu_list_title">menu</h3>
+                                <li class="menu_list_item">
+                                    <a href="#">man</a>
+                                    <ul class="menu_sublist">
+                                        <li class="menu_sublist_item">
+                                            <a href="#">Accessories</a>
+                                        </li>
+                                        <li class="menu_sublist_item">
+                                            <a href="#">Bags</a>
+                                        </li>
+                                        <li class="menu_sublist_item">
+                                            <a href="#">Denim</a>
+                                        </li>
+                                        <li class="menu_sublist_item">
+                                            <a href="#">T-Shirts</a>
+                                        </li>
+                                    </ul>
+                                </li>
+                                <li class="menu_list_item">
+                                    <a href="#">woman</a>
+                                    <ul class="menu_sublist">
+                                        <li class="menu_sublist_item">
+                                            <a href="#">Accessories</a>
+                                        </li>
+                                        <li class="menu_sublist_item">
+                                            <a href="#">Jackets &amp;&nbsp;Coats</a>
+                                        </li>
+                                        <li class="menu_sublist_item">
+                                            <a href="#">Polos</a>
+                                        </li>
+                                        <li class="menu_sublist_item">
+                                            <a href="#">T-Shirts</a>
+                                        </li>
+                                        <li class="menu_sublist_item">
+                                            <a href="#">Shirts</a>
+                                        </li>
+                                    </ul>
+                                </li>
+                                <li class="menu_list_item">
+                                    <a href="#">kids</a>
+                                    <ul class="menu_sublist">
+                                        <li class="menu_sublist_item">
+                                            <a href="#">Accessories</a>
+                                        </li>
+                                        <li class="menu_sublist_item">
+                                            <a href="#">Jackets &amp;&nbsp;Coats</a>
+                                        </li>
+                                        <li class="menu_sublist_item">
+                                            <a href="#">Polos</a>
+                                        </li>
+                                        <li class="menu_sublist_item">
+                                            <a href="#">T-Shirts</a>
+                                        </li>
+                                        <li class="menu_sublist_item">
+                                            <a href="#">Shirts</a>
+                                        </li>
+                                        <li class="menu_sublist_item">
+                                            <a href="#">Bags</a>
+                                        </li>
+                                    </ul>
+                                </li>
+                            </ul>
+                    </nav>
                     <a href="./registration.html"><img src="img/icon/user.svg" alt="user" class="user"></a>
                     <a href="cart.html">
                         <img src="img/icon/cart.svg" alt="cart" class="cart">
@@ -85,7 +153,9 @@
 
                     <div class="product_card_item">
                         <img src="./img/card-1.jpg" alt="card">
-                        <span class="add_to_cart">Add to Cart</span>
+                        <button class="add_to_cart_btn">
+                            <span class="add_to_cart">Add to Cart</span>
+                        </button>
                         <div class="product_card_info">
                             <h4 class="product_card_title">ELLERY X M'O CAPSULE</h4>
                             <span class="product_card_subtitle">Known for her sculptural takes on traditional tailoring,
@@ -97,6 +167,9 @@
 
                     <div class="product_card_item">
                         <img src="./img/card-2.jpg" alt="card">
+                        <button class="add_to_cart_btn">
+                            <span class="add_to_cart">Add to Cart</span>
+                        </button>
                         <div class="product_card_info">
                             <h4 class="product_card_title">ELLERY X M'O CAPSULE</h4>
                             <span class="product_card_subtitle">Known for her sculptural takes on traditional tailoring,
@@ -108,6 +181,9 @@
 
                     <div class="product_card_item">
                         <img src="./img/card-3.jpg" alt="card">
+                        <button class="add_to_cart_btn">
+                            <span class="add_to_cart">Add to Cart</span>
+                        </button>
                         <div class="product_card_info">
                             <h4 class="product_card_title">ELLERY X M'O CAPSULE</h4>
                             <span class="product_card_subtitle">Known for her sculptural takes on traditional tailoring,
@@ -119,6 +195,9 @@
 
                     <div class="product_card_item">
                         <img src="./img/card-4.jpg" alt="card">
+                        <button class="add_to_cart_btn">
+                            <span class="add_to_cart">Add to Cart</span>
+                        </button>
                         <div class="product_card_info">
                             <h4 class="product_card_title">ELLERY X M'O CAPSULE</h4>
                             <span class="product_card_subtitle">Known for her sculptural takes on traditional tailoring,
@@ -130,6 +209,9 @@
 
                     <div class="product_card_item">
                         <img src="./img/card-5.jpg" alt="card">
+                        <button class="add_to_cart_btn">
+                            <span class="add_to_cart">Add to Cart</span>
+                        </button>
                         <div class="product_card_info">
                             <h4 class="product_card_title">ELLERY X M'O CAPSULE</h4>
                             <span class="product_card_subtitle">Known for her sculptural takes on traditional tailoring,
@@ -141,6 +223,9 @@
 
                     <div class="product_card_item">
                         <img src="./img/card-6.jpg" alt="card">
+                        <button class="add_to_cart_btn">
+                            <span class="add_to_cart">Add to Cart</span>
+                        </button>
                         <div class="product_card_info">
                             <h4 class="product_card_title">ELLERY X M'O CAPSULE</h4>
                             <span class="product_card_subtitle">Known for her sculptural takes on traditional tailoring,
